tests/snapshots/cobs_demos__reverse_zcobs_vec-2.snap
---
source: tests/cobs-demos.rs
expression: cobs_ser_fmt_zeroes

---
0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F
0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F
Bytes: 29
