tests/snapshots/cobs_demos__reverse_zcobs_vec-3.snap
---
source: tests/cobs-demos.rs
expression: cobs_ser_fmt

---
0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x08, 0x20, 0x20, 0x20, 0x20, 0x20, 0x11, 0x20, 0x20, 0x20
0x20, 0x20, 0x22, 0x20, 0x20, 0x20, 0x20, 0x20, 0x44, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x08
0x20, 0x20, 0x20, 0x20, 0x20, 0x11, 0x20, 0x20, 0x20, 0x20, 0x20, 0x22, 0x20, 0x20, 0x20, 0x20
0x20, 0x44, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x08, 0x20, 0x20, 0x20, 0x20, 0x20, 0x11, 0x20
0x20, 0x20, 0x20, 0x20, 0x22, 0x20, 0x20, 0x20, 0x20, 0x20, 0x44, 0x20, 0x20, 0x20, 0x20, 0x20
0x20, 0x08, 0x20, 0x20, 0x20, 0x20, 0x20, 0x11, 0x20, 0x20, 0x20, 0x20, 0x20, 0x22, 0x20, 0x20
0x20, 0x20, 0x20, 0x44, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x08, 0x20, 0x20, 0x20, 0x20, 0x20
0x11, 0x20, 0x20, 0x20, 0x20, 0x20, 0x22, 0x20, 0x20, 0x20, 0x20, 0x20, 0x44, 0x20, 0x20, 0x20
0x20, 0x20, 0x20, 0x08, 0x20, 0x20, 0x20, 0x20, 0x20, 0x11, 0x20, 0x20, 0x20, 0x20, 0x20, 0x22
0x20, 0x20, 0x20, 0x20, 0x20, 0x44, 0x20, 0x20, 0x20, 0x20, 0x20, 0x20, 0x08, 0x20, 0x20, 0x20
0x20, 0x20, 0x11, 0x20, 0x20, 0x20, 0x20, 0x20, 0x22, 0x20, 0x20, 0x20, 0x20, 0x20, 0x44, 0x20
0x20, 0x20, 0x78
Bytes: 179
