tests/snapshots/cobs_demos__rler_cobs_roundtrip-2.snap
---
source: tests/cobs-demos.rs
expression: cobs_ser_fmt_zeroes

---
0x41, 0xA1, 0x99, 0x81
Bytes: 4
