tests/snapshots/cobs_demos__rler_cobs_roundtrip-5.snap
---
source: tests/cobs-demos.rs
expression: cobs_ser_fmt

---
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
0x20, 0x42, 0x20, 0x42, 0x20, 0x42, 0x20, 0x42
Bytes: 200
