tests/snapshots/cobs_demos__rler_cobs_roundtrip-6.snap
---
source: tests/cobs-demos.rs
expression: cobs_ser_fmt

---
0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20
0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20
0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43
0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20
0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20
0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43
0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20
0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20
0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43
0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20
0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20
0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x43
0x20, 0x20, 0x43, 0x20, 0x20, 0x43, 0x20, 0x20, 0x03
Bytes: 201
