tests/snapshots/cobs_demos__rler_cobs_roundtrip.snap
---
source: tests/cobs-demos.rs
expression: cobs_ser_fmt

---
0x20, 0x82, 0xF1, 0x41, 0x20, 0x82, 0xF1, 0x41, 0x20, 0x82, 0xF1, 0x41, 0x20, 0x82, 0xF1, 0x41
0x20, 0x82, 0xF1, 0x41, 0x20, 0x82, 0xF1, 0x41, 0x20, 0x82, 0xF1, 0x41, 0x20, 0x82, 0xF1, 0x41
0x20, 0x82, 0xF1, 0x41, 0x20, 0x82, 0xF1, 0x41, 0x20, 0x82, 0xF1, 0x41, 0x20, 0x82, 0xF1, 0x41
0x20, 0x82, 0xF1, 0x41, 0x20, 0xEA
Bytes: 54
