tests/snapshots/cobs_demos__rler_cobs_vec-2.snap
---
source: tests/cobs-demos.rs
expression: cobs_ser_fmt_zeroes

---
0x41, 0xC1, 0xB1, 0x81
Bytes: 4
