tests/snapshots/cobs_demos__rler_cobs_vec-3.snap
---
source: tests/cobs-demos.rs
expression: cobs_ser_fmt

---
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04
0x20, 0x20, 0x20, 0x04, 0x20, 0x20, 0x20, 0x04, 0x01
Bytes: 201
